--- a/.env.example
+++ b/.env.example
@@ -7,11 +7,11 @@ APP_LOG_LEVEL=debug
 APP_PORT=3000
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=rm-j6czk8i54zzs335iq9o.mysql.rds.aliyuncs.com
 DB_PORT=3306
 DB_DATABASE=goblog
-DB_USERNAME=root
-DB_PASSWORD=secret
+DB_USERNAME=karalabe
+DB_PASSWORD=MuBrmbYjXhRTZCCg7
 
 SESSION_DRIVER=cookie
 SESSION_NAME=goblog-session
