--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,8 @@ APP_NAME=myapp
 APP_ENV=local
 APP_KEY=33446a9dcf9ea060a0a6532b166da32f304af0de
 APP_DEBUG=true
-APP_URL=http://localhost:3000
+# 网站域名
+APP_URL=https://echo.wrss.top
 APP_LOG_LEVEL=debug
 APP_PORT=3000
 
