ci(docker): 添加docker-compose.yml

--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,24 @@
 APP_NAME=myapp
 APP_ENV=local
 APP_KEY=33446a9dcf9ea060a0a6532b166da32f304af0de
-APP_DEBUG=true
+APP_DEBUG=false
+
 # 网站域名
-APP_URL=https://echo.wrss.top
+#APP_URL=https://echo.wrss.top
+APP_URL=http://127.0.0.1:3000
 APP_LOG_LEVEL=debug
 APP_PORT=3000
 
 DB_CONNECTION=mysql
-DB_HOST=rm-j6czk8i54zzs335iq9o.mysql.rds.aliyuncs.com
+DB_HOST=echo.mysql
 DB_PORT=3306
-DB_DATABASE=goblog
-DB_USERNAME=karalabe
-DB_PASSWORD=MuBrmbYjXhRTZCCg7
+DB_DATABASE=echo
+DB_USERNAME=root
+DB_PASSWORD=root
 
 SESSION_DRIVER=cookie
 SESSION_NAME=goblog-session
+
+# 是否备份并定时提交到github
+IS_BACKUP=true
+CRON_TIME=24h
