--- a/.env
+++ b/.env
@@ -9,8 +9,8 @@ APP_URL=http://127.0.0.1:3000
 APP_LOG_LEVEL=debug
 APP_PORT=3000
 
-DB_CONNECTION=mysql
-DB_HOST=echo.mysql
+DB_CONNECTION=docker
+DB_HOST=echo-mysql
 DB_PORT=3306
 DB_DATABASE=echo
 DB_USERNAME=root
