--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
       - MYSQL_ROOT_PASSWORD=root
       - TZ=Asia/Shanghai
     volumes:
-#      - ./resources/sql:/docker-entrypoint-initdb.d/
+      - ./resources/sql:/docker-entrypoint-initdb.d/
       - ~/docker/echo/mysql/data:/var/lib/mysql
       - ~/docker/echo/mysql/log:/var/log/mysql
     command:
