--- a/.env.example
+++ b/.env.example
@@ -4,13 +4,13 @@ APP_KEY=33446a9dcf9ea060a0a6532b166da32f304af0de
 APP_DEBUG=false
 
 # 网站域名
-#APP_URL=https://echo.wrss.top
-APP_URL=http://127.0.0.1:3000
+APP_URL=https://echo.wrss.top
+#APP_URL=http://127.0.0.1:3000
 APP_LOG_LEVEL=debug
 APP_PORT=3000
 
-DB_CONNECTION=mysql
-DB_HOST=echo.mysql
+DB_CONNECTION=docker
+DB_HOST=echo-mysql
 DB_PORT=3306
 DB_DATABASE=echo
 DB_USERNAME=root
