--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - TZ=Asia/Shanghai
 
   mysql:
-    image: mysql:5.7
+    image: mysql:latest
     container_name: echo-mysql
     ports:
       - 3306:3306
